boreal/tests/assets/invalid_files/parsing/jump_empty.yar
// [error: jump cannot have a length of 0]
rule a {
    strings:
        $a = { AB [0] 0F }
    condition:
        $a
}
